# Halite_Challenge

./: .gitignore  README.md  pyproject.toml  submission.py
.github/workflows/: github-ci.yaml
src/: DQN_example.ipynb  agg_submission.py  attackers.ipynb  conditions.py  draft_submission.py  game.py  mining.ipynb  submission.py  submission_v1.py  test.ipynb
src/archive/: DQN_example.ipynb  agg_submission.py  attackers.ipynb  attackers.py  mining.ipynb
