[tool.poetry]
name = "starblazer"
version = "0.1.0"
description = ""
authors = ["Janosch Hoefer", "Tom Wuest", "Nils Strickmann"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
kaggle-environments = "^1.9.9"
ipython = "^8.3.0"
ipykernel = "^6.13.0"
torch = "^1.11.0"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
